Update: Filter student by grade

--- a/Thuchanh1/Thuchanh1.csproj
+++ b/Thuchanh1/Thuchanh1.csproj
@@ -100,8 +100,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="D.sql" />
-    <Content Include="GV.sql" />
+    <Content Include="GenerateDatabase.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
