--- a/Thuchanh1/Thuchanh1.csproj
+++ b/Thuchanh1/Thuchanh1.csproj
@@ -49,6 +49,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FPerson.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FPerson.Designer.cs">
+      <DependentUpon>FPerson.cs</DependentUpon>
+    </Compile>
     <Compile Include="TeacherDAO.cs" />
     <Compile Include="DBConnection.cs" />
     <Compile Include="StudentDAO.cs" />
@@ -69,6 +75,15 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Student.cs" />
     <Compile Include="Teacher.cs" />
+    <Compile Include="UCInformation.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UCInformation.Designer.cs">
+      <DependentUpon>UCInformation.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="FPerson.resx">
+      <DependentUpon>FPerson.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FStudent.resx">
       <DependentUpon>FStudent.cs</DependentUpon>
     </EmbeddedResource>
@@ -84,6 +99,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="UCInformation.resx">
+      <DependentUpon>UCInformation.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="ClassDiagram1.cd" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
