--- a/Thuchanh1/Thuchanh1.csproj
+++ b/Thuchanh1/Thuchanh1.csproj
@@ -33,11 +33,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.SqlClient, Version=4.6.1.5, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Data.SqlClient.4.8.5\lib\net461\System.Data.SqlClient.dll</HintPath>
     </Reference>
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,14 +50,10 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FPerson.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FPerson.Designer.cs">
-      <DependentUpon>FPerson.cs</DependentUpon>
-    </Compile>
+    <Compile Include="PersonDAO.cs" />
     <Compile Include="TeacherDAO.cs" />
     <Compile Include="DBConnection.cs" />
     <Compile Include="StudentDAO.cs" />
@@ -81,9 +80,6 @@
     <Compile Include="UCInformation.Designer.cs">
       <DependentUpon>UCInformation.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="FPerson.resx">
-      <DependentUpon>FPerson.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="FStudent.resx">
       <DependentUpon>FStudent.cs</DependentUpon>
     </EmbeddedResource>
@@ -102,7 +98,6 @@
     <EmbeddedResource Include="UCInformation.resx">
       <DependentUpon>UCInformation.cs</DependentUpon>
     </EmbeddedResource>
-    <None Include="ClassDiagram1.cd" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
